kubernetes/cluster/default/rustfs/ingress-cdn.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rustfs-cdn
  namespace: rustfs
  labels:
    app.kubernetes.io/name: rustfs-cdn
  annotations:
    kubernetes.io/ingress.class: public
    cert-manager.io/cluster-issuer: lets-encrypt
spec:
  rules:
    - host: cdn.brhd.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: rustfs-svc
                port:
                  name: console
